fix exercise number alignment in data science

--- a/styles/output/data-science-pdf.css
+++ b/styles/output/data-science-pdf.css
@@ -3523,7 +3523,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
-  width: 2%;
+  width: 2.2%;
   text-align: right;
 }
 
@@ -3567,7 +3567,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
-  width: 2%;
+  width: 2.2%;
   text-align: right;
 }
 
@@ -3623,7 +3623,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
-  width: 2%;
+  width: 2.2%;
   text-align: right;
 }
 
@@ -3667,7 +3667,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
-  width: 2%;
+  width: 2.2%;
   text-align: right;
 }
 
@@ -3723,7 +3723,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
-  width: 2%;
+  width: 2.2%;
   text-align: right;
 }
 
@@ -3767,7 +3767,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
-  width: 2%;
+  width: 2.2%;
   text-align: right;
 }
 
